fixed grid spacing for no scroll

--- a/style.css
+++ b/style.css
@@ -28,5 +28,5 @@ main {
     margin: 0px auto;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-gap: 5px;
+    grid-gap: 4px;
 }
